--- a/index.html
+++ b/index.html
@@ -393,30 +393,30 @@
         </div>
       </div>
       <div class="comments">
-        <h2 class="title comments__content-title">
+        <h2 class="title comments__title">
           Фотографы, снимающие Россию
         </h2>
-        <h3 class="subtitle comments__content-subtitle">
+        <h3 class="subtitle comments__subtitle">
           Природа и люди вдохновили их работы, удостоенные наград на
           международных конкурсах
         </h3>
-        <div class="comments__container">
+        <div class="container comments__container">
           <div class="container__comment">
           <!-- Нужно исправить: container__comment - это элемент блока container, а самого блока container на странице нет. Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется. -->
             <img
               src="foto/lyagushkin.jpg"
               alt="Фотография Лягушкина"
-              class="comments__container-image"
+              class="container__image"
             />
-            <p class="text comment__qute-text">
+            <p class="text container__quote-text">
               «Если вам кажется, что в России ничего не происходит, то просто
               выгляньте “наружу”…»
             </p>
-            <p class="comment__author">Виктор Лягушкин</p>
+            <p class="container__author">Виктор Лягушкин</p>
           <!-- 
             Нужно исправить: 
             В этом диве несколько элементов блока comment, но самого блока comment на странице нет.
-            Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется.
+            Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется. ++++corected
           -->
           </div>
 
@@ -424,28 +424,28 @@
             <img
               src="foto/hafizov.jpg"
               alt="Фотография Хафизова"
-              class="comments__container-image"
+              class="container__image"
             />
-            <p class="text comment__qute-text">
+            <p class="text container__quote-text">
               «Если в город едут туристы — неважно за чем они туда едут: за
               шамбалой или фрески Рублева искать, или на родину Тарковского —
               туристы обеспечивают любой город молодёжью, рабочими местами и в
               конечном счёте наполняют его жизнью.»
             </p>
-            <p class="comment__author">Иван Хафизов</p>
+            <p class="container__author">Иван Хафизов</p>
           </div>
 
           <div class="container__comment">
             <img
               src="foto/maksimshin.jpg"
               alt="Фотография Максимшина"
-              class="comments__container-image"
+              class="container__image"
             />
-            <p class="text comment__qute-text">
+            <p class="text container__quote-text">
               «Ты приезжаешь, и люди рассказывают тебе, как им плохо. А когда ты
               покажешь, как им плохо, то ты сволочь и всё очернил.»
             </p>
-            <p class="comment__author">Сергей Максимишин</p>
+            <p class="container__author">Сергей Максимишин</p>
           </div>
         </div>
       </div>
