--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page">
       <header class="header">
         <img src="foto/logo.svg" alt="Логотип" class="header__iogo" />
-        <div class="header__lang">
+        <div class="header__langs">
           <a href="#" class="link header__lang header__lang_active">Ru</a>
           <a href="#" class="link header__lang">En</a>
         </div>
