--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
         <p class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
-        <!-- 
-          Можно лучше: 
-          Лучше соблюдать иерархию заголовков - например, после h2 может идти или h2 или h3, но не h4, h5 или h6
-          А в данном случае это подзаголовок, а подзаголовки лучше верстать с помощью тега <p>.
-
-          Подробнее про верстку подзаголовков можно почитать в спецификации - https://www.w3.org/TR/html52/common-idioms-without-dedicated-elements.html#subheadings-subtitles-alternative-titles-and-taglines
-        -->
         <img
           src="foto/polka.jpg"
           class="lead__image"
@@ -145,11 +138,8 @@
           alt="Красивая природа России"
           class="photo__grid"
         />
-        <!-- 
-        Просто информация: 
-        Заметил сейчас в стилях блока photo какой-то странный width: 82%.
-        Кажется, что его нужно удалить.+++ можно не буду? Он задаёт ширину
-      --></div>
+
+      </div>
       <div class="places">
         <div class="places__place">
           <h2 class="title places__title">Куршская коса</h2>
@@ -299,41 +289,28 @@
             href="https://vimeo.com/81106671"
             class="bloсk__item block__item_bg_kamchatka"
           >
-            <!-- 
-                Нужно исправить: 
-                на теге не может быть модификатор без блока\элемента, который этим модификатором модифицируется.
-                video__conteiner_item - это модификатор элемента video__container. Соответственно этот див должен быть элементом video__container +++исправил
-              -->
             <img
               src="foto/icon_play.svg"
               alt="Иконка Пуск"
               class="block__icon-play"
             />
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор. Это замечание не исправлено+++исправил -->
             <div class="block__rect">
               <p class="block__duration">6:30</p>
               <h3 class="title block__title">Colors of Kamchatka</h3>
               <p class="subtitle block__subtitle">
                 Director: Pavel Karykhalin
               </p>
-              <!-- 
-                Нужно исправить: 
-                В этом диве несколько элементов блока item, но самого блока item на странице нет.
-                Это ошибка по БЭМ. Во втором видео эта ошибка повторяется. +++исправил
-              -->
             </div>
           </a>
           <a
             href="https://vimeo.com/290675450"
             class="bloсk__item block__item_bg_observatory"
           >
-            <!-- Нужно исправить: Здесь проблема из первого видео повторяется. +++исправил-->
             <img
               src="foto/icon_play.svg"
               alt="Иконка Пуск"
               class="block__icon-play"
             />
-            <!-- Нужно исправить: Здесь проблема из первого видео повторяется.  +++исправил-->
             <div class="block__rect">
               <p class="block__duration">24:45</p>
               <h3 class="title block__title">Обсерватория | Observatory</h3>
@@ -386,11 +363,6 @@
               тут при древнем поселении на реке Угра.
             </p>
           </div>
-          <!-- 
-            Просто информация:
-            Это не ошибка, но предположу, что элементы item-nvr, item-arak и т.д. задумывались как модификаторы.
-            А сейчас это элементы.
-          -->
         </div>
       </div>
       <div class="comments">
@@ -403,7 +375,6 @@
         </h3>
         <div class="container comments__container">
           <div class="container__comment">
-            <!-- Нужно исправить: container__comment - это элемент блока container, а самого блока container на странице нет. Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется. -->
             <img
               src="foto/lyagushkin.jpg"
               alt="Фотография Лягушкина"
@@ -414,11 +385,7 @@
               выгляньте “наружу”…»
             </p>
             <p class="container__author">Виктор Лягушкин</p>
-            <!-- 
-            Нужно исправить: 
-            В этом диве несколько элементов блока comment, но самого блока comment на странице нет.
-            Это ошибка по БЭМ. В остальных комментариях эта ошибка повторяется. ++++corected
-          --></div>
+          </div>
 
           <div class="container__comment">
             <img
@@ -468,8 +435,6 @@
               class="emblem__image"
             />
             <p class="emblem__city">Великий Новгород</p>
-            <!-- Нужно исправить: item__image и item__city - это элементы блока item, а самого блока item на странице нет. 
-              Это ошибка по БЭМ. В остальных гербах эта ошибка повторяется.++++corected -->
           </div>
           <div class="emblem__item">
             <img
@@ -519,8 +484,6 @@
               class="link description__link"
               >Умереть или родиться здесь практически невозможно</a
             >
-            <!-- Нужно исправить: description__url-heading и description__link - это элементы блока description, а самого блока description на странице нет. 
-              Это ошибка по БЭМ.+++corected -->
           </div>
         </div>
       </div>
@@ -567,27 +530,13 @@
 </html>
 
 <!-- 
-  Плагином, про который написано в "можно лучше" очень советую воспользоваться.
-  С его помощью вы сами сможете увидеть большое количество расхождений с макетом.
-  А расхождения эти совершенно точно будут, если просто скопировать оступы из фигмы. Т.к. в фигме не учитывается line-height.
+  Принято
 
-
-  Ну и с БЭМ модификаторами ещё есть проблемы.
-  Обязательно нужно разобраться чем элемент отличается от модификатора. И чем простой модификатор отличается от обычного.
-  БЭМ штука не простая, да. Но разобраться с ним нужно, т.к. он применятся буквально везде. Чуть ли не на каждом сайте.
-  Если сделать правильную nested структуру папок и файлов по БЭМ, то это тоже поможет лучше понять БЭМ.  ++++структуру папок (переименование) черех vs code не могу сделать((( программа зависает... пожалуйста, в следующей работе учту
-
-  Про структуру папок это просто рекомендация.
-
-
+  
   Можно лучше:
   - Структура папок не самая лучшая.
   - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
     Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
-
-  Нужно исправить:
-  - Все "Нужно исправить"
-
 
   Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/#validate_by_input
   Он поможет отловить большинство ошибок.
@@ -598,8 +547,4 @@
   Разделы про уровни переопределения пока можно пропустить, они только ещё больше запутают. ++++:-))
   Можно еще посмотреть первую половину классного видео про БЭМ здесь - https://www.youtube.com/watch?v=sX8xQrwk6ko (про простые модификаторы Владимир в этом видео говорит на 21 минуте) ++++ Большое спасибо!
 
-  Комментарии "можно лучше" носят рекомендательный характер, их выполнение остается на Ваше усмотрение.
-  Комментарии "надо исправить" являются обязательными, только при выполнении всех "надо исправить" работа будет зачтена.
-  Пожалуйста, не удаляйте комментарии до следующей итерации.
-  Для вашего удобства, рекомендую помечать каким-нибудь символом комментарии, которые вы выполнили.
 -->
