--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </a>
         </div>
       </div>
-      <div class="additional">
+      <!--<div class="additional">
         <h2 class="title  additional__title">А также</h2>
         <h3 class="subtitle additional__subtitle">
           места, рекомендованные нашими фотографами
@@ -364,7 +364,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="comments">
         <h2 class="title comments__title">
           Фотографы, снимающие Россию
@@ -423,9 +423,7 @@
           до Байкала на электричках.
         </p>
       </a>
-      <div class="emblem">
-        <h2 class="title emblem__title">
-          Природа на гербах российских городов
+<!--          Природа на гербах российских городов
         </h2>
         <div class="emblem__items">
           <div class="emblem__item">
@@ -486,7 +484,7 @@
             >
           </div>
         </div>
-      </div>
+      </div>-->
       <footer class="footer">
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
         <ul class="footer__list">
