--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </div>
       <div class="intro">
         <h2 class="title intro__title">Чего мы там не видели?</h2>
-        <h3 class="subtitle intro__subtitle">
+        <!--<h3 class="subtitle intro__subtitle">
           Зачем путешествовать по своему дому
-        </h3>
+        </h3>-->
         <div class="intro__content-row">
           <p class="text  intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
@@ -47,7 +47,7 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <div class="intro__autor">
+          <!--<div class="intro__autor">
             <p class="intro__text-autor">
               Автор текста:
               <span class="intro__span-accent"> В.В.Пупкин</span>
@@ -55,7 +55,7 @@
             <p class="intro__text-autor">
               Дата:<span class="intro__span-accent"> 17.06.17</span>
             </p>
-          </div>
+          </div>-->
         </div>
         <ul class="intro__list">
           <li class="intro__list-text">
