Адаптация блока video

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           class="photo__grid"
         />
         <img
-          src="foto/kamchatka.jpg"
+          src="foto/kamchatka-1.jpg"
           alt="Красивая природа России"
           class="photo__grid"
         />
