--- a/index.html
+++ b/index.html
@@ -546,3 +546,43 @@
   Можно еще посмотреть первую половину классного видео про БЭМ здесь - https://www.youtube.com/watch?v=sX8xQrwk6ko (про простые модификаторы Владимир в этом видео говорит на 21 минуте) ++++ Большое спасибо!
 
 -->
+
+
+<!--/*
+@media screen and (max-width: 320px) {
+  .block__duration {
+    margin-top: 49PX;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__duration {
+  margin-top: 41px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block__duration {
+    margin-top: 41px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__duration {
+  
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .block__duration {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .block__duration {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}-->
