--- a/index.html
+++ b/index.html
@@ -7,29 +7,39 @@
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/page.css" />
+    <!-- Отлично! правильно оформлен head -->
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img src="foto/logo.svg" alt="Логотип" class="header__iogo" />
+        <!-- Отлично! логотип загружен в векторном формате -->
+
         <div class="header__langs">
           <a href="#" class="link header__lang header__lang_active">Ru</a>
+          <!-- Отлично! Выбранный язык реализован с помощью модификатора -->
           <a href="#" class="link header__lang">En</a>
         </div>
       </header>
       <div class="lead">
+        <!-- Надо исправить: используйте тег section -->
         <h1 class="title lead__title">Путешествия по России</h1>
+        <!-- Отлично! правильно выделен заголовок страницы и обозначен тегом h1 -->
         <p class="subtitle lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
+        <!-- Отлично! подзаголовок сделан с помощью параграфа -->
         <img
           src="foto/polka.jpg"
           class="lead__image"
           alt="kalegin-michail-179870-unsplash"
         />
         <p class="lead__caption">Ваша полка — верхняя</p>
+        <!-- Можно лучше: для изображения и его описания можете использовать тег figure
+                https://developer.mozilla.org/ru/docs/Web/HTML/Element/figure -->
       </div>
       <div class="intro">
+        <!-- Надо исправить: используйте тег section -->
         <h2 class="title intro__title">Чего мы там не видели?</h2>
         <!--<h3 class="subtitle intro__subtitle">
           Зачем путешествовать по своему дому
@@ -76,8 +86,10 @@
             Аэропортов <span class="intro__span-accent"> 241</span>
           </li>
         </ul>
+        <!-- Отлично! Вы используете в разметке семантические теги списка ul -->
       </div>
       <div class="photo">
+        <!-- Надо исправить: используйте тег section -->
         <img
           src="foto/train.jpg"
           alt="Красивая природа России"
@@ -138,26 +150,33 @@
           alt="Красивая природа России"
           class="photo__grid"
         />
-
       </div>
       <div class="places">
+        <!-- Надо исправить: используйте тег section -->
         <div class="places__place">
           <h2 class="title places__title">Куршская коса</h2>
           <div class="places__place-website">
             <p class="places__url-heading">URL</p>
+            <!-- Можно лучше: вместо капса лучше использовать text-transform: uppercase -->
             <a href="http://park-kosa.ru/" class="link places__url"
               >park-kosa.ru</a
             >
+            <!-- Можно лучше: для внешних ссылок можно добавить атрибут target="_blank" -->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
+          <!-- Надо исправить: это должен быть элемент блока places  -->
+
           <div class="paragraph">
+            <!-- Надо исправить: это должен быть элемент блока places  -->
             <p class="text place__paragraph-region">
+              <!-- Надо исправить: это должен быть элемент блока places  -->
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.
             </p>
             <p class="text place__paragraph-region">
+              <!-- Надо исправить: это должен быть элемент блока places  -->
               На этом Калининградская область не заканчивается. Для
               путешественника и исследователя там же по соседству — самая
               западная точка России, Балтийская коса, — и немецкое наследие
@@ -279,8 +298,10 @@
         </div>
       </div>
       <div class="video">
+        <!-- Надо исправить: используйте тег section -->
         <h2 class="title video__title">В глубины Земли и в дальний космос</h2>
         <h3 class="subtitle video__subtitle">
+          <!-- Можно лучше: используйте для подзаголовков параграфы -->
           Видео от студии Stereotactic о местах в России, где ведутся
           фундаментальные исследования
         </h3>
@@ -289,6 +310,7 @@
             href="https://vimeo.com/81106671"
             class="bloсk__item block__item_bg_kamchatka"
           >
+            <!-- Можно лучше: для внешних ссылок можно добавить атрибут target="_blank" -->
             <img
               src="foto/icon_play.svg"
               alt="Иконка Пуск"
@@ -366,6 +388,7 @@
         </div>
       </div>-->
       <div class="comments">
+        <!-- Надо исправить: используйте тег section -->
         <h2 class="title comments__title">
           Фотографы, снимающие Россию
         </h2>
@@ -373,6 +396,8 @@
           Природа и люди вдохновили их работы, удостоенные наград на
           международных конкурсах
         </h3>
+        <!-- Можно лучше: используйте для подзаголовков параграфы -->
+
         <div class="container comments__container">
           <div class="container__comment">
             <img
@@ -384,6 +409,7 @@
               «Если вам кажется, что в России ничего не происходит, то просто
               выгляньте “наружу”…»
             </p>
+            <!-- Можно лучше: По смыслу это цитата, так что тут лучше использовать элемент blockquote. Подробнее можно почитать тут: https://developer.mozilla.org/ru/docs/Web/HTML/Element/blockquote-->
             <p class="container__author">Виктор Лягушкин</p>
           </div>
 
@@ -423,7 +449,9 @@
           до Байкала на электричках.
         </p>
       </a>
-<!--          Природа на гербах российских городов
+      <!--   <div class="emblem">
+        <h2 class="title emblem__title">       
+  Природа на гербах российских городов
         </h2>
         <div class="emblem__items">
           <div class="emblem__item">
@@ -487,6 +515,10 @@
       </div>-->
       <footer class="footer">
         <p class="text footer__text-copyright">&copy; 2020. Олег Черняков</p>
+        <!-- Можно лучше: для значка копирайт используйте мнемоники html
+                           https://html5book.ru/specsimvoly-html
+                        -->
+
         <ul class="footer__list">
           <li>
             <a
@@ -522,29 +554,108 @@
             >
           </li>
         </ul>
+        <!-- Надо исправить: по смыслу эти ссылки - навигация. Оберните их в список <nav>. используйте список nav > ul > li > a -->
       </footer>
     </div>
   </body>
 </html>
 
-<!-- 
-  Принято
+<!-- В целом по работе: 
 
+      Отлично! Понравилось в работе:
+
+        - Страница валидна
+        - Использованы семантические теги и списки
+        - Для переиспользования в проекте есть блоки
+        - Размечены все макеты
+        - На большом экране контент центрируется
+        - Используется векторная графика
+
+    Наша команда приносит извинения, при проверке работы на предыдущем спринте были пропущены ошибки.
+    Коментарии "Надо исправить" необходимо внести, т.к в дальнейшем вы можете столкнуться с проблемами при выполнении заданий и сдачи проектных и дипломной работы.
+
+    Надо исправить:
+
+ - комментарии в разметке
+
+ - Для текстовых используется font-family: 'Inter', это является не совсем корректным решением. В том случае, если по какой-либо причине, например, шрифты не загрузятся или будет использоваться браузер, не поддерживающий современные расширения формата, следует предусмотреть такой исход и один или несколько из системных шрифтов. Используйте font-family: 'Inter', Arial, sans-serif; Желательно задать каждому блоку font-family
+
+  - .header__lang удалите фиксированную высоту
+
+  - .place__paragraph-region, .paragraph удалите overflow hidden
+    
+	- вынесите стилизацию page в свой css файл
+
+	- вынесите папку place/ из папки places/
+  это независимый блок и должен быть на одном уровне с остальными
+    
+  - link:hover по брифу должен иметь значение 0.7
+
+  - .footer__link удалите подчеркивание
+
+  на 1280:
+  - ширина .places, .comments, .cover, .footer не соответствует макету
+
+  на 1024:
+  - .photo__grid размер не соответствует макету
+  - .cover высота не соответствует макету
   
-  Можно лучше:
-  - Структура папок не самая лучшая.
-  - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
-    Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
+  на 768:
+  - .photo__grid размер не соответствует макету
+  - размер видео и внутренние отступы не соответствуют макету
+  - в .container__comment порядок элементов не соответствует макету
+  - .cover высота не соответствует макету
 
-  Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/#validate_by_input
-  Он поможет отловить большинство ошибок.
+  - между 375 и 768 растягивается изображение .block__item
 
-  Чтобы разобраться с БЭМ рекомендую:
-  Почитайте или перечитайте ещё раз если уже читали про БЭМ на официальном сайте БЭМа - https://ru.bem.info/methodology/quick-start/
-  Там вам нужно прочитать 5 первых разделов - Быстрый старт, основные понятия, соглашение по именованию, css и html. +++++Спасибо!
-  Разделы про уровни переопределения пока можно пропустить, они только ещё больше запутают. ++++:-))
-  Можно еще посмотреть первую половину классного видео про БЭМ здесь - https://www.youtube.com/watch?v=sX8xQrwk6ko (про простые модификаторы Владимир в этом видео говорит на 21 минуте) ++++ Большое спасибо!
+  на 375 и 320:
+  - размер логотипа не соответствует макету
+  - параметры шрифта у языков не соответствуют макету
+  - уменьшите отступы у заголовка и подзаголовка в .lead
+  - .intro__text параметры шрифта не соответствуют макету
+  - .photo__grid размер не соответствует макету
+  - .block__duration параметры шрифта не соответствуют макету
+  - в .container__comment порядок элементов не соответствует макету
+  - .cover высота не соответствует макету
 
+  на 320:
+  - горизонтальный скролл
+  - расстояние между .photo__grid 8 пикселей
+
+
+    Можно улучшить:
+
+    - Поправьте отступы в блоках на всех разрешениях
+    Вы установили высоту строки у заголовка и координат как в макете и задали отступ тоже как в макете, проблема в том что все эти программы (Figma/Avocode/Zeplin) не учитывают высоту строки т.е. они показывают отступ от символа до символа, а браузер отступ делает от высоты строки до высоты строки. Т.е. это не бриф в котором указаны размеры, они могут css быть другие, включая pixel perfect можно подогнать
+https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi?hl=ru
+   
+    - в стилях модификатора оставьте только изменяющиеся параметры (наример, .block__item)
+
+    - Комментарии в разметке
+
+    - Удалите сломанные пути до файла. В консоли браузера сейчас подсвечены ошибки, в каких путях не нашелся файл. Хорошей практикой является работа с консолью без ошибок.
+
+    - в навигации в footer на мобильных макетах (320 и 375) поправьте расстояние между ссылками. 
+   бразер и Figma по-разному считают вертикальное расстояние между текстовыми элементами, поэтому проста цифра из макета не совпадает
+   наложите макет на страницу и сверьте расстояние
+
+
+  Пожалуйста, не удаляйте комментарии
+Исправленные комментарии помечайте +
+
+Для получения зачета исправьте комментарии "Надо исправить"
+
+Полезные материалы:
+
+Масштабируемые шрифты
+- https://codepen.io/Maks113/pen/dgWpxE
+- https://codepen.io/CrocoDillon/pen/fBJxu
+- https://codepen.io/TrevorJTClarke/pen/GoJYOo
+- https://codepen.io/podolskiis/pen/erxmKW
+
+Плотность пикселей
+- https://vc.ru/design/19864-pixels-in-mobile-design
+
+Что должен знать фронтенд-разработчик
+- https://habr.com/ru/company/netologyru/blog/327294/
 -->
-
-
